//------------------------------------------------------------------------------
// {C} Copyright 2019 Pensando Systems Inc. All rights reserved
//
// protobuf specification for lim
//
//------------------------------------------------------------------------------

syntax = "proto3";
package pds;

import "gogo.proto";
import "meta/meta.proto";
import "types.proto";

// lim service definition
service LimSvc {
  rpc LimIfStatusGet (LimIfStatusGetRequest) returns (LimIfStatusGetResponse) {}
  rpc LimIfAddrTableGet (LimIfAddrTableGetRequest) returns (LimIfAddrTableGetResponse) {}
}

enum LimIfOperStatus {
  OPER_NONE = 0;
  OPER_UP = 1;
  OPER_DOWN = 2;
  OPER_TESTING = 3;
  OPER_UNKNOWN = 4;
  OPER_DORMANT = 5;
  OPER_NOT_PRESENT = 6;
  OPER_LOWER_LAYER_DN = 7;
}

enum LimIfType {
  IFTYP_NONE = 0;
  IFTYP_OTHER = 1;
  IFTYP_ETHERNET_CSMACD = 6;
  IFTYP_SOFTWARE_LOOPBACK = 24;
  IFTYP_PROP_VIRTUAL = 53;
  IFTYP_TUNNEL = 131;
  IFTYP_L2VLAN = 135;
  IFTYP_L3IPVLAN = 136;
  IFTYP_IP_FORWARD = 142;
  IFTYP_MPLS_TUNNEL = 150;
  IFTYP_8023AD_LAG = 161;
  IFTYP_MPLS = 166;
  IFTYP_IF_PW_TYPE = 246;
  IFTYP_HQOS_NODE = 4096;
  IFTYP_FLOW = 4097;
}

enum LimIfLoopbackMode {
  LOOPBACK_NONE = 0;
  MAC_LOOPBACK = 1;
}

enum LimIfOperReason {
  OPR_RSN_EMPTY = 0;
  OPR_RSN_NONE = 1;
  OPR_RSN_ENT_NOT_UP = 2;
  OPR_RSN_ADMIN_CFG = 3;
  OPR_RSN_PROG = 4;
  OPR_RSN_HQOS_SET = 5;
  OPR_RSN_HQOS_LVL = 6;
  OPR_RSN_HQOS_NO_SRC_IF = 7;
  OPR_RSN_HQOS_OVRLP_CFG = 8;
  OPR_RSN_HQOS_INCMPLT_TR = 9;
  OPR_RSN_HQOS_DFLT_BRNCH = 10;
  OPR_RSN_Q_NO_IF = 11;
  OPR_RSN_HQOS_NODE_NO_IF = 12;
  OPR_RSN_RSRC_FAIL = 13;
  OPR_RSN_HQOS_PT_MSMTCH = 14;
  OPR_RSN_Q_WRONG_IF = 15;
  OPR_RSN_HQOS_WRONG_SRC = 16;
  OPR_RSN_SUBIF_NO_MATCH = 17;
  OPR_RSN_SUBIF_M_NO_IF = 18;
  OPR_RSN_SUBIF_NO_PARENT = 19;
  OPR_RSN_LOCAL_IF_ERROR = 20;
  OPR_RSN_SUBIF_R_NO_IF = 21;
  OPR_RSN_SLOT_DOWN = 22;
}

message LimIfStatus {
  uint32            EntityIndex  = 1;
  uint32            IfIndex      = 2;
  // Operational status of the interface.
  LimIfOperStatus   OperStatus   = 3;
  // The assigned name of the interface.
  string            Name         = 4;
  // The assigned description of the interface.
  string            Description  = 5;
  // The type of interface.
  LimIfType         Type         = 6;
  // The MAC address of the interface.
  string            MacAddr      = 7;
  // The MTU of the interface
  uint32            Mtu          = 8;
  // The loopback mode used on this interface.
  LimIfLoopbackMode LoopBackMode = 9;
  // Wrapping count of the number of link flaps detected.
  uint32            FlapCount    = 10;
  // The reason for the interface to be in its current oper status.
  LimIfOperReason   OperReason   = 11;
}

message LimIfStatusKey {
  uint32 EntityIndex = 1;
  uint32 IfIndex     = 2;
}

message LimIf {
  LimIfStatus Status = 1;
}

// BGP NLRI prefix get response
message LimIfStatusGetResponse {
  types.ApiStatus ApiStatus = 1;
  repeated LimIf  Response  = 2;
}

// Lim Interface key handle
message LimIfStatusKeyHandle {
  LimIfStatusKey Key = 1;
}

// Lim Interface status get request
message LimIfStatusGetRequest {
  repeated LimIfStatusKeyHandle Request = 1;
}

enum LimIfAddrOperStatus {
  OPER_STATUS_NONE        = 0;
  OPER_STATUS_UP          = 1;
  OPER_STATUS_DOWN        = 2;
  OPER_STATUS_GOING_UP    = 3;
  OPER_STATUS_GOING_DOWN  = 4;
  OPER_STATUS_FAILED      = 5;
  OPER_STATUS_FAILED_PERM = 10;
  OPER_STATUS_FAILING     = 11;
}

// LimIfAddrTableStatus table
message LimIfAddrTableStatus {
  uint32              EntityIndex  = 1;
  uint32              IfIndex      = 2;
  types.IPAddress     IPAddr       = 3;
  LimIfAddrOperStatus OperStatus   = 4;
}

message LimIfAddrTableKey {
  uint32          EntityIndex = 1;
  uint32          IfIndex     = 2;
  types.IPAddress IPAddr      = 3;
}

message LimIfAddrTable {
  LimIfAddrTableStatus Status = 1;
}

message LimIfAddrTableGetResponse {
  types.ApiStatus         ApiStatus = 1;
  repeated LimIfAddrTable Response  = 2;
}

// Lim Interface key handle
message LimIfAddrTableKeyHandle {
  LimIfAddrTableKey Key = 1;
}

// Lim Interface status get request
message LimIfAddrTableGetRequest {
  repeated LimIfAddrTableKeyHandle Request = 1;
}
